// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: input, state: error, theme: light, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #CC1922",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(input:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#951219",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: input, state: none, theme: light, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #6B6D70",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(input:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#010205",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: input, state: none, theme: light, isLoading: true and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #6B6D70",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: input, state: success, theme: light, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(input)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #197E10",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#010205",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(input:disabled)": {
    "WebkitTextFillColor": "#949598",
    "borderColor": "#949598",
    "color": "#949598",
    "cursor": "not-allowed",
  },
  "::slotted(input:focus)": {
    "borderColor": "#010205",
  },
  "::slotted(input[readonly])": {
    "background": "#D8D8DB",
    "borderColor": "#D8D8DB",
  },
  "@media(hover:hover)": {
    "::slotted(input:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(input:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#0E4809",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: select, state: error, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(select:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: select, state: none, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #88898C",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(select:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: select, state: success, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(select)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #09D087",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "calc(calc(6px + 2.125ex) + 10px + 2px * 2 + 8px * 2)",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(select:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(select:focus)": {
    "borderColor": "#FBFCFF",
  },
  "@media(hover:hover)": {
    "::slotted(select:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(select:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#069561",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: textarea, state: error, theme: dark, isLoading: false and additionalDefaultJssStyle: { bottom: 5 } 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "bottom": 5,
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(textarea:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: textarea, state: error, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #FC4040",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(textarea:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#FB0404",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: textarea, state: none, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #88898C",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(textarea:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#FBFCFF",
    },
  },
}
`;

exports[`getSlottedTextFieldTextareaSelectStyles() should return correct css for child: textarea, state: success, theme: dark, isLoading: false and additionalDefaultJssStyle: undefined 1`] = `
{
  "::slotted(textarea)": {
    "WebkitAppearance": "none",
    "appearance": "none",
    "background": "transparent",
    "border": "2px solid #09D087",
    "borderRadius": "4px",
    "boxSizing": "border-box",
    "color": "#FBFCFF",
    "display": "block",
    "font": "normal normal 400 1rem/calc(6px + 2.125ex + 6px) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
    "height": "auto",
    "margin": 0,
    "outline": 0,
    "textIndent": 0,
    "transition": "color var(--p-transition-duration, .24s) ease,border-color var(--p-transition-duration, .24s) ease,background-color var(--p-transition-duration, .24s) ease",
    "width": "100%",
  },
  "::slotted(textarea:disabled)": {
    "WebkitTextFillColor": "#7E7F82",
    "borderColor": "#7E7F82",
    "color": "#7E7F82",
    "cursor": "not-allowed",
  },
  "::slotted(textarea:focus)": {
    "borderColor": "#FBFCFF",
  },
  "::slotted(textarea[readonly])": {
    "background": "#404044",
    "borderColor": "#404044",
  },
  "@media(hover:hover)": {
    "::slotted(textarea:not(:disabled):not(:focus):not([readonly]):hover),label:hover~* ::slotted(textarea:not(:disabled):not(:focus):not([readonly])),label:hover~* ::part(select-wrapper-dropdown)": {
      "borderColor": "#069561",
    },
  },
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: false and theme: auto 1`] = `
{
  "@media (prefers-color-scheme: dark)": {
    "color": "#88898C",
  },
  "boxSizing": "border-box",
  "color": "#6B6D70",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: false and theme: dark 1`] = `
{
  "boxSizing": "border-box",
  "color": "#88898C",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: false and theme: light 1`] = `
{
  "boxSizing": "border-box",
  "color": "#6B6D70",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: true and theme: auto 1`] = `
{
  "@media (prefers-color-scheme: dark)": {
    "color": "#7E7F82",
  },
  "boxSizing": "border-box",
  "color": "#949598",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: true and theme: dark 1`] = `
{
  "boxSizing": "border-box",
  "color": "#7E7F82",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;

exports[`getUnitCounterStyles() should return correct css for isDisabled: true and theme: light 1`] = `
{
  "boxSizing": "border-box",
  "color": "#949598",
  "font": "normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif",
  "maxWidth": "100%",
  "overflow": "hidden",
  "pointerEvents": "none",
  "textOverflow": "ellipsis",
  "whiteSpace": "nowrap",
}
`;
